--- a/project-manager.html
+++ b/project-manager.html
@@ -40,14 +40,30 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/dept/jobs/1101007'>Job Application for Senior Digital Project Manager at Dept</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ooITafwT&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nkYppMwn'>ServiceNow Careers - Senior IT Program Manager - Front office applications</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e496096'>Stellenangebot: Junior Project Manager (m/w/d) (Stuttgart) ? dasauge? Stellenmarkt</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e542441'>Stellenangebot: Senior Project Manager (m/w/d) (Stuttgart) ? dasauge? Stellenmarkt</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698558526-project-manager-in-community-relations'>BlaBlaCar Project Manager in Community Relations | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Paris, France</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/dept/jobs/1101007'>Job Application for Senior Digital Project Manager at Dept</a></h5> 
+<p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://savangardcareer.recruitee.com/o/project-manager'>
       Project Manager - Savangard Sp. z o.o.
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://savangardcareer.recruitee.com/o/project-manager-wrocaw'>
@@ -209,7 +225,7 @@
 <p><span class="badge badge-light">Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://hitchcock.referrals.selectminds.com/jobs/project-manager-ft-psychiatry-research-days-6862'>Project Manager (FT), Psychiatry Research - Days - Dartmouth-Hitchcock Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hitchcock.referrals.selectminds.com/jobs/project-manager-ft-psychiatry-research-days-6862'>Project Manager (FT), Psychiatry Research - Days - Dartmouth-Hitchcock Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -237,7 +253,7 @@
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ouri9fw6&__jvst=Employee+Referral&__jvsd=skamghwS&__jvsc=Twitter&bid=nHddpMwN'>ServiceNow Careers - Senior Program Manager - Contract</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ouri9fw6&__jvst=Employee+Referral&__jvsd=skamghwS&__jvsc=Twitter&bid=nHddpMwN'>ServiceNow Careers - Senior Program Manager - Contract</a></h5> 
 <p><span class="badge badge-light">Hyderabad, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -325,7 +341,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/p3-americas/job/o5ksbfwM'>umlaut North America Careers - Aerospace Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/p3-americas/job/o5ksbfwM'>umlaut North America Careers - Aerospace Project Manager</a></h5> 
 <p><span class="badge badge-light">North America Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -365,7 +381,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IPSTechnologyServices/743999698299509-program-manager'>IPS Technology Services Program Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IPSTechnologyServices/743999698299509-program-manager'>IPS Technology Services Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbus, OH, USA  Columbus, OH</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -393,7 +409,7 @@
 <p><span class="badge badge-light">San Francisco, CA  San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/xqwhk9upyd15sinnsr16wwgmpr'>Technical Project Manager III :?9493433 | Current Openings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/xqwhk9upyd15sinnsr16wwgmpr'>Technical Project Manager III :?9493433 | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -405,11 +421,11 @@
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/project-manager-24284-tx-cfA9rC-Wer6BTLaKjNoogA'>Project Manager-24284-TX #0684 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/project-manager-24284-tx-cfA9rC-Wer6BTLaKjNoogA'>Project Manager-24284-TX #0684 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Irving, TXIrving, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://m3crecrutement.zohorecruit.com/recruit/ViewJob.na?digest=36LT2iOfvOFdZ@sD5ERE9Dv8n6FDENLYRJ@FmibpIG0-&embedsource=CareerSite'>Gestionnaire de projet SAP/ SAP Project Manager (#371)</a></h5> 
+<h5><a href='https://m3crecrutement.zohorecruit.com/recruit/ViewJob.na?digest=36LT2iOfvOFdZ@sD5ERE9Dv8n6FDENLYRJ@FmibpIG0-&embedsource=CareerSite'>Gestionnaire de projet SAP/ SAP Project Manager (#371)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -431,22 +447,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ZARecruiting/743999698476152-lead-senior-regulatory-affairs-project-manager-medical-device-full-relo'>Z&A Recruiting LEAD SENIOR REGULATORY AFFAIRS PROJECT MANAGER - MEDICAL DEVICE  - FULL RELO | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/969025'>Job Application for Project Manager Intern at AKQA</a></h5> 
-<p><span class="badge badge-light">Milan</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/1929179'>Job Application for Project Manager Intern at AKQA</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/1930629'>Job Application for Senior Project Manager  at AKQA</a></h5> 
-<p><span class="badge badge-light">Sydney</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/akqa/jobs/1935452'>Job Application for Senior Project Manager at AKQA</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
