--- a/full-stack.html
+++ b/full-stack.html
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/notarize/c69af410-ed47-4185-800b-d5035cc7a5c6'>Notarize - Full-Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/notarize/c69af410-ed47-4185-800b-d5035cc7a5c6'>Notarize - Full-Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -184,7 +184,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CAUnited States  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -378,7 +378,7 @@
 <p><span class="badge badge-light">Boston, MA, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=ncJRnMwq'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=ncJRnMwq'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -422,7 +422,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.dice.com/jobs/detail/Full-Stack-Developer-TOP-Consulting-Columbus-Ohio-/10486611/6272533'>Full Stack Developer - TOP Consulting - Columbus, Ohio | Dice.com</a></h5> 
+<h5><a href='https://www.dice.com/jobs/detail/Full-Stack-Developer-TOP-Consulting-Columbus-Ohio-/10486611/6272533'>Full Stack Developer - TOP Consulting - Columbus, Ohio | Dice.com</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -445,7 +445,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
